# Persuasion_Techniques_in_US_Debates

./: .env_template  .gitignore  2020_10_22_biden.txt  LICENSE  README.md  dvc.yaml  params.yaml  pyproject.toml  test_annotations.dvc
.dvc/: .gitignore  config
data/: .gitignore  additional_stop_words.txt.dvc  categories.json  metadata.dvc  raw.dvc  template_metadata.json
data/metadata/: .gitignore  2020_09_29_trump_biden.json.dvc  2020_10_22_trump_biden.json.dvc  template.json
data/no_orphan_lines/: .gitignore
data/speeches/: .gitignore
data/uniformed/: .gitignore  2012_10_16_romney_obama.txt  2016_10_09_trump_clinton.txt  2016_10_19_trump_clinton.txt
data/without_topics/: .gitignore  2012_10_22_romney_obama.txt  2016_09_26_trump_clinton.txt
notebooks/: evaluate_md5.ipynb  explore_api.ipynb
plots/: .gitignore
src/: annotate_persuasion.py  create_persuasion_files.py  get_tfidf.py  merge_results.py  remove_orphan_new_lines.py  remove_stop_words.py  remove_topics.py  split_candidate.py  uniform_candidate_names.py
src/dvc_steps/: remove_empty_new_lines.py  remove_orphan_new_lines.py
src/plot_scripts/: persuasions_over_year.py  recourse_to_technique_over_debates.py  recourse_to_technique_over_year.py
