[tool.poetry]
name = "persuasion-techniques-in-us-debates"
version = "0.1.0"
description = ""
authors = ["devitg <g.devita7@campus.unimib.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
dvc = "^3.30.3"
dvc-gdrive = "^2.20.0"
requests = "^2.31.0"
ipykernel = "^6.29.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"